<resources>
    <string name="app_name">YourChemist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scientific_name">Chemical name or scientific name</string>
    <string name="generic_name">Nonproprietary (generic) name</string>
    <string name="made_in">Made in ...</string>
    <string name="availability_txt">Do you currently have this drug</string>
    <string name="price">Price</string>
    <string name="currency">Currency</string>
    <string name="more_details">More details about this drug</string>
    <string name="chemist">Chemist</string>
    <string name="add_medicine_menu">add medicine</string>
    <string name="in_demand_drug_menu">In demand drug</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
</resources>
