<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/add_medicine_menu"
        android:id="@+id/add_medicine_menu"
        app:showAsAction="never"
        />
    <item
        android:title="@string/in_demand_drug_menu"
        android:id="@+id/in_demand_menu"
        app:showAsAction="never"
        />
    <item
        android:title="@string/log_out"
        android:id="@+id/logout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/search_list_medicine"
        android:icon="@drawable/ic_search_black_24dp"
        app:showAsAction="ifRoom|collapseActionView"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
</menu>